tests/baselines/reference/privateStaticNotAccessibleInClodule2.errors.txt
==== tests/cases/compiler/privateStaticNotAccessibleInClodule2.ts (1 errors) ====
    // Any attempt to access a private property member outside the class body that contains its declaration results in a compile-time error.
    
    class C {
        private foo: string;
        private static bar: string;
    }
    
    class D extends C {
        baz: number;   
    }
    
    module D {
        export var y = D.bar; // error
                         ~~~
!!! privateStaticNotAccessibleInClodule2.ts(13,22): error TS2107: 'C.bar' is inaccessible.
    }